fix off center posts with main. Not best fix but it'll will do...

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -27,6 +27,10 @@ main {
     padding: 16px;
 }
 
+.mainPosts {
+    margin-left: -16px
+}
+
 h1 {
     font-family: lobster;
     font-size: 3em;
